-Fix regression where all the dialogs would have generic names ('mnemosyne')
 as opposed to e.g. 'Add cards'.
-Correctly format clozes in latex, e.g. [Lorentz force law]
 <$>[\mathbf{F}]=[q]([\mathbf{E}]+[\mathbf{v}\times\mathbf{B}]</$>
 ()requested by acdenh)
-Fix crash when converting multiple cards at the same time between e.g.
 Vocabulary card type and Map card type (reported by Gnome).
-Unless the 'Prefill tag behaviour' plugin is active, changing card types will
 never change the tag you already filled in, even if it's different from the
 last used tag (reported by Gnome).
-When changing the font for '<all card types>', make a more neutral choice
 for default font in case currently different card types have different
 fonts (reported by Gnome).
-Make sync and sync error handling more robust.
-In case you don't explicitly select a background colour, use your theme's
 background colour as opposed to white for empty cards (reported by ialectum).
-The quote key to left of 1 (`) can now also be used as a short cut for grade 0
 (requested by Kent Stearman).
-In the card browser, CTRL+F can be used to focus the input on the search
 field (requested by abacus).
-Improve the position of dialogs popping up from the card browser,
 sync window, ... .
-Fix crash pressing the 'Delete' key in the 'Activate cards' dialog (reported
 by Gnome).
-When changing card types, only warn about losing history when there is actual
 history present (reported by Gnome).
-In case you are not using saved sets and create a new tag whose parent is
 inactive, make the new tag inactive too. (If you have a saved set active,
 you'll get a dialog box asking whether you want to activate that tag or not,
 just like before) (reported by Gnome).
-Fix bug in interaction between Latex system and exporting to the 'cards'
 format (reported by Gwern).
-More tweaks for RTL languages like Arabic and Hebrew (bug report by
 Ansgar Bohmann).
-No more superfluous empty lines for cards with RTL languages.